--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 
     <div class="conteiner">
         <h1 class="title_currency">Конвертер валют онлайн</h1>
-        <div class="block">
-            
+
+        <div class="block_conteiner">
+            <div class="block">
                 <p class="i_have">У меня есть</p>
                 <ul class="list_currency">
                     <li class="list_currency_item"><span>RUB</span></li>
@@ -56,7 +57,30 @@
                     <input type="text" class="input_currency" placeholder="">
                     <p class="curse_choise_value">1 RUB = 0.0135 USD</p>
                 </div>
-            
+            </div>
+
+            <div class="strelka">
+                <img src="./img/strelka.png" alt="strelka">
+            </div>
+
+            <div class="block">
+                <p class="i_have">Хочу приобрести</p>
+                <ul class="list_currency">
+                    <li class="list_currency_item"><span>RUB</span></li>
+                    <li class="list_currency_item"><span>USD</span> </li>
+                    <li class="list_currency_item"><span>EUR</span> </li>
+                    <li class="list_currency_item"><span>GBP</span></li>
+                    <li class="list_currency_item">
+                        <select name="" id="" class="list_currency_select">
+                            <option value="ILS">ILS</option>
+                        </select>
+                    </li>   
+                </ul>
+                <div class="block_input">
+                    <input type="text" class="input_currency" placeholder="">
+                    <p class="curse_choise_value">1 RUB = 0.0135 USD</p>
+                </div>
+            </div>
         </div>   
     </div>
     </main>
