--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
         <div class="block_conteiner">
             <div class="block">
                 <p class="i_have">У меня есть</p>
-                <ul class="list_currency">
-                    <li class="list_currency_item"><span>RUB</span></li>
-                    <li class="list_currency_item"><span>USD</span> </li>
-                    <li class="list_currency_item"><span>EUR</span> </li>
-                    <li class="list_currency_item"><span>GBP</span></li>
+                <ul class="list_currency">  
+                    <li class="list_currency_item">RUB</li>
+                    <li class="list_currency_item">USD </li>
+                    <li class="list_currency_item">EUR </li>
+                    <li class="list_currency_item">GBP</li>
                     <li class="list_currency_item">
-                        <select name="" id="" class="list_currency_select">
-                            <option value="ILS">ILS</option>
+                        <select name="" id="" class="list_currency_select select_input">
                         </select>
                     </li>   
                 </ul>
@@ -66,13 +65,12 @@
             <div class="block">
                 <p class="i_have">Хочу приобрести</p>
                 <ul class="list_currency">
-                    <li class="list_currency_item"><span>RUB</span></li>
-                    <li class="list_currency_item"><span>USD</span> </li>
-                    <li class="list_currency_item"><span>EUR</span> </li>
-                    <li class="list_currency_item"><span>GBP</span></li>
+                    <li class="list_currency_item">RUB</li>
+                    <li class="list_currency_item">USD</li>
+                    <li class="list_currency_item">EUR</li>
+                    <li class="list_currency_item">GBP</li>
                     <li class="list_currency_item">
-                        <select name="" id="" class="list_currency_select">
-                            <option value="ILS">ILS</option>
+                        <select name="" id="" class="list_currency_select select_output">
                         </select>
                     </li>   
                 </ul>
