add new function, add update data currency

--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
             <div class="block">
                 <p class="i_have">У меня есть</p>
                 <ul class="list_currency">  
-                    <li class="list_currency_item">RUB</li>
-                    <li class="list_currency_item">USD </li>
-                    <li class="list_currency_item">EUR </li>
-                    <li class="list_currency_item">GBP</li>
-                    <li class="list_currency_item">
+                    <li class="list_currency_item item_input selected">RUB</li>
+                    <li class="list_currency_item item_input">USD </li>
+                    <li class="list_currency_item item_input">EUR </li>
+                    <li class="list_currency_item item_input">GBP</li>
+                    <li class="list_currency_item item_input">
                         <select name="" id="" class="list_currency_select select_input">
                         </select>
                     </li>   
                 </ul>
                 <div class="block_input">
-                    <input type="text" class="input_currency" placeholder="">
-                    <p class="curse_choise_value">1 RUB = 0.0135 USD</p>
+                    <input type="text" class="input_currency" placeholder="" value=0    >
+                    <p class="curse_choise_value curse_input_value">1 RUB = 0.0135 USD</p>
                 </div>
             </div>
 
@@ -65,18 +65,18 @@
             <div class="block">
                 <p class="i_have">Хочу приобрести</p>
                 <ul class="list_currency">
-                    <li class="list_currency_item">RUB</li>
-                    <li class="list_currency_item">USD</li>
-                    <li class="list_currency_item">EUR</li>
-                    <li class="list_currency_item">GBP</li>
-                    <li class="list_currency_item">
+                    <li class="list_currency_item item_output">RUB</li>
+                    <li class="list_currency_item item_output selected">USD</li>
+                    <li class="list_currency_item item_output">EUR</li>
+                    <li class="list_currency_item item_output">GBP</li>
+                    <li class="list_currency_item item_output">
                         <select name="" id="" class="list_currency_select select_output">
                         </select>
                     </li>   
                 </ul>
                 <div class="block_input">
-                    <input type="text" class="input_currency" placeholder="">
-                    <p class="curse_choise_value">1 RUB = 0.0135 USD</p>
+                    <input type="text" class="output_currency" placeholder="">
+                    <p class="curse_choise_value curse_output_value">1 RUB = 0.0135 USD</p>
                 </div>
             </div>
         </div>   
