add loading scrin, replace (',' , '.')

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="loading back">
+        <span>loading...</span>
+    </div>
     <header class="menu_bar">
         <img class="menu_bar_logo" src="./img/bank_logo.png" alt="bank_logo">
         <ul class="menu_bar_list">
@@ -58,8 +61,8 @@
                 </div>
             </div>
 
-            <div class="strelka">
-                <img src="./img/strelka.png" alt="strelka">
+            <div class="swap">
+                <img src="./img/swap.png" alt="strelka">
             </div>
 
             <div class="block">
