--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
         <h1 class="title_currency">Конвертер валют онлайн</h1>
 
         <div class="block_conteiner">
+            <div class="block"><p class="i_have">У меня есть</p></div>
+            <div class="block"><p class="i_have">Хочу приобрести</p></div>
+        </div>
+
+        <div class="block_conteiner currency">
             <div class="block">
-                <p class="i_have">У меня есть</p>
                 <ul class="list_currency">  
                     <li class="list_currency_item item_input selected">RUB</li>
                     <li class="list_currency_item item_input">USD </li>
@@ -66,7 +70,6 @@
             </div>
 
             <div class="block">
-                <p class="i_have">Хочу приобрести</p>
                 <ul class="list_currency">
                     <li class="list_currency_item item_output">RUB</li>
                     <li class="list_currency_item item_output selected">USD</li>
